lib/src/libraries/native_add_library.dart

// Copyright (c) 2024 NIMA.
// This package is governed by an MIT License.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Permission is hereby granted, free of charge, to any person obtaining a
/// copy of this software and associated documentation files (the "Software"),
/// to deal in the Software without restriction, including without limitation
/// the rights to use, copy, modify, merge, publish, distribute, sublicense,
/// and/or sell copies of the Software, and to permit persons to whom the
/// Software is furnished to do so, subject to the following conditions:
///
/// The above copyright notice and this permission notice shall be included in
/// all copies or substantial portions of the Software.
///
/// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
/// OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
/// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
/// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
/// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
/// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
/// DEALINGS IN THE SOFTWARE.
@ffi.Native<ffi.Double Function(ffi.Int, ffi.Int)>(symbol: 'arithmetic_mean')
external double arithmetic_mean(
  int a,
  int b,
);

@ffi.Native<ffi.Double Function(ffi.Int, ffi.Int)>(symbol: 'geometric_mean')
external double geometric_mean(
  int a,
  int b,
);

@ffi.Native<ffi.Double Function(ffi.Int, ffi.Int)>(symbol: 'harmonic_mean')
external double harmonic_mean(
  int a,
  int b,
);

@ffi.Native<ffi.Double Function(ffi.Int, ffi.Int)>(symbol: 'quadratic_mean')
external double quadratic_mean(
  int a,
  int b,
);
